feat: support codestral

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     "anyprecision",
     "autocast",
     "bettertransformer",
+    "Codestral",
     "colour",
     "Concatenator",
     "detokenize",
