--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
---find-links https://download.pytorch.org/whl/torch_stable.html
-torch==2.3.1+cu121
+--find-links https://download.pytorch.org/whl/cu124
+torch==2.4.1
 
 # huggingface
 transformers>=4.44.0
