feat: llm-recipes code structure change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "bettertransformer",
     "Codestral",
     "colour",
+    "Colwise",
     "Concatenator",
     "detokenize",
     "detokenizer",
@@ -33,7 +34,9 @@
     "huggingface",
     "kahan",
     "kotoba",
+    "layernorm",
     "memtrace",
+    "microbatches",
     "Mixtral",
     "MMIDIDX",
     "multimodal",
@@ -51,6 +54,7 @@
     "probs",
     "psutil",
     "pubmed",
+    "Rowwise",
     "samsum",
     "seqyebce",
     "Sharded",
